# docker-pretty-images

./: README.md  pyproject.toml  setup.py
dockerprettyimages/: __init__.py
src/docker_pretty_images/: __init__.py
