[project]
name = "docker-pretty-images"
version = "0.1.0"
description = "Pretty prints docker images"
readme = "README.md"
authors = [
    { name = "jpm7", email = "jpm7@jpm7.org" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
docker-pretty-images = "docker_pretty_images:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
